--- a/Sample/Droid/MvvmCross.Plugins.TextSelection.Sample.Droid.csproj
+++ b/Sample/Droid/MvvmCross.Plugins.TextSelection.Sample.Droid.csproj
@@ -43,38 +43,38 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
+    <Reference Include="Mono.Android.Export" />
     <Reference Include="MvvmCross.Platform">
-      <HintPath>..\packages\MvvmCross.Platform.5.7.0\lib\MonoAndroid\MvvmCross.Platform.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Platform.5.7.0\lib\MonoAndroid\MvvmCross.Platform.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Platform.Droid">
-      <HintPath>..\packages\MvvmCross.Platform.5.7.0\lib\MonoAndroid\MvvmCross.Platform.Droid.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Platform.5.7.0\lib\MonoAndroid\MvvmCross.Platform.Droid.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Core">
-      <HintPath>..\packages\MvvmCross.Core.5.7.0\lib\MonoAndroid\MvvmCross.Core.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Core.5.7.0\lib\MonoAndroid\MvvmCross.Core.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Droid">
-      <HintPath>..\packages\MvvmCross.Core.5.7.0\lib\MonoAndroid\MvvmCross.Droid.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Core.5.7.0\lib\MonoAndroid\MvvmCross.Droid.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Binding">
-      <HintPath>..\packages\MvvmCross.Binding.5.7.0\lib\MonoAndroid\MvvmCross.Binding.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Binding.5.7.0\lib\MonoAndroid\MvvmCross.Binding.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Binding.Droid">
-      <HintPath>..\packages\MvvmCross.Binding.5.7.0\lib\MonoAndroid\MvvmCross.Binding.Droid.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Binding.5.7.0\lib\MonoAndroid\MvvmCross.Binding.Droid.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Localization">
-      <HintPath>..\packages\MvvmCross.Binding.5.7.0\lib\MonoAndroid\MvvmCross.Localization.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Binding.5.7.0\lib\MonoAndroid\MvvmCross.Localization.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Android.Export" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setup.cs" />
+    <Compile Include="Bootstrap\TextSelectionPluginBootstrap.cs" />
     <Compile Include="Views\MainView.cs" />
     <Compile Include="SplashScreen.cs" />
-    <Compile Include="Setup.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="DebugTrace.cs" />
-    <Compile Include="Bootstrap\TextSelectionPluginBootstrap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -89,27 +89,27 @@
     <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
+    <AndroidResource Include="Resources\layout\MainView.axml" />
     <AndroidResource Include="Resources\values\SplashStyle.xml" />
     <AndroidResource Include="Resources\layout\SplashScreen.axml" />
-    <AndroidResource Include="Resources\layout\MainView.axml" />
     <AndroidResource Include="Resources\drawable\splash.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MvvmCross.Plugins.TextSelection.Droid\MvvmCross.Plugins.TextSelection.Droid.csproj">
-      <Project>{C93E2B95-9DE5-4A76-9BF9-BC21EDB83CA7}</Project>
-      <Name>MvvmCross.Plugins.TextSelection.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MvvmCross.Plugins.TextSelection.Sample.Core\MvvmCross.Plugins.TextSelection.Sample.Core.csproj">
-      <Project>{5F95BDDC-A192-4966-B235-E88533DC430C}</Project>
-      <Name>MvvmCross.Plugins.TextSelection.Sample.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MvvmCross.Plugins.TextSelection\MvvmCross.Plugins.TextSelection.csproj">
+    <Folder Include="Bootstrap\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\TextSelection\MvvmCross.Plugins.TextSelection\MvvmCross.Plugins.TextSelection.csproj">
       <Project>{60E10BD3-DB9F-4CCB-9B12-C9799D7E7BCE}</Project>
       <Name>MvvmCross.Plugins.TextSelection</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Bootstrap\" />
+    <ProjectReference Include="..\..\TextSelection\MvvmCross.Plugins.TextSelection.Droid\MvvmCross.Plugins.TextSelection.Droid.csproj">
+      <Project>{C93E2B95-9DE5-4A76-9BF9-BC21EDB83CA7}</Project>
+      <Name>MvvmCross.Plugins.TextSelection.Droid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\MvvmCross.Plugins.TextSelection.Sample.Core.csproj">
+      <Project>{5F95BDDC-A192-4966-B235-E88533DC430C}</Project>
+      <Name>MvvmCross.Plugins.TextSelection.Sample.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
