--- a/Sample/iOS/MvvmCross.Plugins.TextSelection.Sample.iOS.csproj
+++ b/Sample/iOS/MvvmCross.Plugins.TextSelection.Sample.iOS.csproj
@@ -85,25 +85,25 @@
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
     <Reference Include="MvvmCross.Platform">
-      <HintPath>..\packages\MvvmCross.Platform.5.7.0\lib\Xamarin.iOS10\MvvmCross.Platform.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Platform.5.7.0\lib\Xamarin.iOS10\MvvmCross.Platform.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Platform.iOS">
-      <HintPath>..\packages\MvvmCross.Platform.5.7.0\lib\Xamarin.iOS10\MvvmCross.Platform.iOS.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Platform.5.7.0\lib\Xamarin.iOS10\MvvmCross.Platform.iOS.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Core">
-      <HintPath>..\packages\MvvmCross.Core.5.7.0\lib\Xamarin.iOS10\MvvmCross.Core.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Core.5.7.0\lib\Xamarin.iOS10\MvvmCross.Core.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.iOS">
-      <HintPath>..\packages\MvvmCross.Core.5.7.0\lib\Xamarin.iOS10\MvvmCross.iOS.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Core.5.7.0\lib\Xamarin.iOS10\MvvmCross.iOS.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Binding">
-      <HintPath>..\packages\MvvmCross.Binding.5.7.0\lib\Xamarin.iOS10\MvvmCross.Binding.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Binding.5.7.0\lib\Xamarin.iOS10\MvvmCross.Binding.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Binding.iOS">
-      <HintPath>..\packages\MvvmCross.Binding.5.7.0\lib\Xamarin.iOS10\MvvmCross.Binding.iOS.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Binding.5.7.0\lib\Xamarin.iOS10\MvvmCross.Binding.iOS.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Localization">
-      <HintPath>..\packages\MvvmCross.Binding.5.7.0\lib\Xamarin.iOS10\MvvmCross.Localization.dll</HintPath>
+      <HintPath>..\..\packages\MvvmCross.Binding.5.7.0\lib\Xamarin.iOS10\MvvmCross.Localization.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -123,32 +123,31 @@
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
     <None Include="packages.config" />
-    <None Include="AppDelegate.cs.txt" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Setup.cs" />
-    <Compile Include="LinkerPleaseInclude.cs" />
-    <Compile Include="DebugTrace.cs" />
     <Compile Include="Views\MainView.cs" />
     <Compile Include="Views\MainView.designer.cs">
       <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
     <Compile Include="Bootstrap\TextSelectionPluginBootstrap.cs" />
+    <Compile Include="LinkerPleaseInclude.cs" />
+    <Compile Include="DebugTrace.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MvvmCross.Plugins.TextSelection.Sample.Core\MvvmCross.Plugins.TextSelection.Sample.Core.csproj">
-      <Project>{5F95BDDC-A192-4966-B235-E88533DC430C}</Project>
-      <Name>MvvmCross.Plugins.TextSelection.Sample.Core</Name>
+    <ProjectReference Include="..\..\TextSelection\MvvmCross.Plugins.TextSelection.iOS\MvvmCross.Plugins.TextSelection.iOS.csproj">
+      <Project>{443E97DC-3652-4668-88E4-4EDBE5D935F8}</Project>
+      <Name>MvvmCross.Plugins.TextSelection.iOS</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MvvmCross.Plugins.TextSelection\MvvmCross.Plugins.TextSelection.csproj">
+    <ProjectReference Include="..\..\TextSelection\MvvmCross.Plugins.TextSelection\MvvmCross.Plugins.TextSelection.csproj">
       <Project>{60E10BD3-DB9F-4CCB-9B12-C9799D7E7BCE}</Project>
       <Name>MvvmCross.Plugins.TextSelection</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MvvmCross.Plugins.TextSelection.iOS\MvvmCross.Plugins.TextSelection.iOS.csproj">
-      <Project>{443E97DC-3652-4668-88E4-4EDBE5D935F8}</Project>
-      <Name>MvvmCross.Plugins.TextSelection.iOS</Name>
+    <ProjectReference Include="..\Core\MvvmCross.Plugins.TextSelection.Sample.Core.csproj">
+      <Project>{5F95BDDC-A192-4966-B235-E88533DC430C}</Project>
+      <Name>MvvmCross.Plugins.TextSelection.Sample.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
