--- a/nuspec/MvvmCross.Plugins.TextSelection.nuspec
+++ b/nuspec/MvvmCross.Plugins.TextSelection.nuspec
@@ -11,19 +11,32 @@
 		<description>This package contains the 'TextSelection' plugin for MvvmCross</description>
 		<tags>mvvm mvvmcross cross xamarin android ios monodroid monotouch xamarin.android xamarin.ios plugin</tags>
 		<dependencies>
-			<dependency id="MvvmCross.Binding" version="5.7.0" />
+		    <group>
+		        <dependency id="MvvmCross.Platform" version="5.7.0" />
+		    </group>
+			<group targetFramework ="MonoAndroid">
+			    <dependency id="MvvmCross.Binding" version="5.7.0" />
+		    </group>
+			<group targetFramework ="Xamarin.iOS">
+			    <dependency id="MvvmCross.Binding" version="5.7.0" />
+		    </group>
 		</dependencies>
 	</metadata>
 	<files>
+	    <!-- PCL -->
+		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection\bin\Release\MvvmCross.Plugins.TextSelection.*" target="lib/portable-net45+win+wpa81+wp80" />
+
+		<!-- dotnet -->
+		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection\bin\Release\MvvmCross.Plugins.TextSelection.*" target="lib/dotnet" />
+		
 		<!-- droid -->
-		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection\bin\Release\MvvmCross.Plugins.TextSelection.dll" target="lib/MonoAndroid" />
-		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection.Droid\bin\Release\MvvmCross.Plugins.TextSelection.dll" target="lib/MonoAndroid" />
+		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection\bin\Release\MvvmCross.Plugins.TextSelection.*" target="lib/MonoAndroid" />
+		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection.Droid\bin\Release\MvvmCross.Plugins.TextSelection.Droid.*" target="lib/MonoAndroid" />
 		<file src="BootstrapContent\TextSelectionPluginBootstrap.cs.pp" target="content/MonoAndroid/Bootstrap/TextSelectionPluginBootstrap.cs.pp" />
 
 		<!-- iOS -->
-		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection\bin\Release\MvvmCross.Plugins.TextSelection.dll" target="lib/Xamarin.iOS10" />
-		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection.iOS\bin\Release\MvvmCross.Plugins.TextSelection.dll" target="lib/Xamarin.iOS10" />
+		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection\bin\Release\MvvmCross.Plugins.TextSelection.*" target="lib/Xamarin.iOS10" />
+		<file src="..\TextSelection\MvvmCross.Plugins.TextSelection.iOS\bin\Release\MvvmCross.Plugins.TextSelection.iOS.*" target="lib/Xamarin.iOS10" />
 		<file src="iOSBootstrapContent\TextSelectionPluginBootstrap.cs.pp" target="content/Xamarin.iOS10/Bootstrap/TextSelectionPluginBootstrap.cs.pp" />
-
 	</files>
 </package>
