--- a/Sample/iOS/Info.plist
+++ b/Sample/iOS/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleName</key>
-	<string>MvvmCross.Plugins.TextSelection.Sample</string>
+	<string>Miyu.MvxPlugins.TextSelection.Sample</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.MvvmCross-Plugins-TextSelection-Sample</string>
+	<string>com.companyname.Miyu-MvxPlugins-TextSelection-Sample</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -13,7 +13,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
-	<string>9.0</string>
+	<string>10.0</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
